Fixed z-index bug

--- a/chrome/src/components/Main/MainApp/CenterPiece/CenterPiece.scss
+++ b/chrome/src/components/Main/MainApp/CenterPiece/CenterPiece.scss
@@ -3,10 +3,7 @@
   width: 100%;
   height: 100%;
   //background: radial-gradient(rgba(0,0,0,0.25) 35%, rgba(0,0,0,0) 70%);
-  z-index: 0;
-
-  // -webkit-animation: fade 1s;
-  // animation-timing-function: ease-in;
+  // z-index: 0;
    -webkit-transform: translateY(-6%);
   display: flex;
   justify-content: center;
